# MYXN-Token

./: .env.example  .gitignore  Anchor.toml  BURN_TIMELINE_CORRECTION.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DEVNET_SUCCESS.md  DEVNET_TEST_SUMMARY.md  FEE_DISTRIBUTION_COMPLETE.md  FEE_DISTRIBUTION_INDEX.md  FEE_DISTRIBUTION_INTEGRATION.md  FEE_DISTRIBUTION_QUICK_REFERENCE.md  FEE_DISTRIBUTION_SYSTEM.md  FEE_SYSTEM_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETION_REPORT.md  LISTING_QUICK_START.md  LISTING_SUBMISSION_TEMPLATES.md  MAINNET_DEPLOYMENT_GUIDE.md  MANUAL_IPFS_UPLOAD.md  METADATA_RUNBOOK.md  MYXEN_FOUNDATION_CONFIG.md  MYXEN_FOUNDATION_INTEGRATION.md  MYXEN_FOUNDATION_SETUP.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  SUBMISSION_TEMPLATES.md  TEST_SUMMARY.md  TOKEN_LIST_PR_CREATED.md  TOKEN_LIST_SUBMISSION.md  attach-metadata-devnet.sh  deployment-mainnet-record.json  metadata-mainnet-deployment.json  package-metadata.json
User Data/: MASTER PROMPT MYXN Mainnet.txt  Master Prompt MYXN Metadata.md  Official Git Repo list.txt  Public Key.txt  Social Media List .txt  Wallet List with address old.txt  Wallet List with address.txt  fee_distribution_config.json  metadata.json
devnet-token-deployment/: README.md  deployment-record.json  package.json
docs/: audit-proof-template.json
integration/: BlockchainService.php  PresaleController.php  TokenService.php
mainnet-token-deployment/: package.json  (+1 more)
programs/myxn-presale/: Cargo.toml
programs/myxn-presale/src/: lib.rs
(+82 files in other folders)
