[package]
name = "myxn-presale"
version = "0.1.0"
description = "MYXN Presale, Vesting, and LP Management Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "myxn_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
